# compare-sqlx-and-seaorm

./: .gitignore  Cargo.toml  README.md
docs/: db_design.md  seaql_notes.md
sea_orm/: Cargo.toml
sea_orm/migrations/: 20211225122301_categories.sql  20211225134423_alteractivity.sql
sea_orm/src/: lib.rs  main.rs
sea_orm/src/entity/: mod.rs
sea_orm/src/entity_expanded/: categories.rs
sea_ql/: .envrc  Cargo.toml
sea_ql/migrations/: 20211224163538_activities.sql  20211225071816_durations.sql  20211225122256_sub_categories.sql  20211225131013_users.sql  20211225135654_alterdurations.sql  20211225135816_alter_activity_column.sql
sea_ql/src/: main.rs
sea_ql/src/entity/: activities.rs  durations.rs  mod.rs  prelude.rs
sea_ql/src/entity_expanded/: activities.rs  durations.rs  mod.rs  prelude.rs  sub_categories.rs  users.rs
sqlx/: Cargo.toml
