[package]
name = "sea_ql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14", features = ["full"] }
axum = { version = "^0" }
tower = "0.4.11"
tower-http = { version = "0.2", features = ["fs"] }
tower-cookies = { version = "0.4" }
anyhow = "1"
dotenv = "0.15"
env_logger = "0.9"
serde = "1"
serde_json = "1"
tera = "1"
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print","with-chrono"], default-features = false }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.2", features = ["time", "local-time", "env-filter"] }
